--- a/src/pages/landing/Home.scss
+++ b/src/pages/landing/Home.scss
@@ -121,6 +121,7 @@
     .features-section {
         padding: 5rem 1rem;
         background-color: rgba(254, 111, 20, 0.03);
+        border-radius: 2rem;
 
         .features-container {
             max-width: 1200px;
