--- a/src/pages/dashboard/components/DashboardHeader.scss
+++ b/src/pages/dashboard/components/DashboardHeader.scss
@@ -37,3 +37,15 @@
         padding: 1rem;
     }
 }
+
+.dashboard__header-name {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin: 0;
+}
+
+.dashboard__header-email {
+    font-size: 0.8rem;
+    font-weight: 400;
+    margin: 0;
+}
