--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,30 @@
 }
 
 body {
+    .loading-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+
+        img {
+            width: 150px;
+            animation: scale 1s infinite;
+        }
+
+        @keyframes scale {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.2);
+            }
+        }
+    }
+
     button {
         cursor: pointer;
     }
