--- a/src/pages/dashboard/components/DashboardNav.scss
+++ b/src/pages/dashboard/components/DashboardNav.scss
@@ -28,8 +28,13 @@
         display: block;
         position: fixed;
         bottom: 0;
+        left: 0;
         width: 100%;
         padding: 0.5rem 1rem;
         z-index: 999;
+
+        .mobile-nav {
+            box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
+        }
     }
 }
