--- a/src/pages/dashboard/components/DashboardHeader.scss
+++ b/src/pages/dashboard/components/DashboardHeader.scss
@@ -38,14 +38,15 @@
     }
 }
 
-.dashboard__header-name {
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin: 0;
-}
+.dashboard__header-drawer {
+    .dashboard__header-name {
+        font-weight: 500;
+        margin: 0;
+    }
 
-.dashboard__header-email {
-    font-size: 0.8rem;
-    font-weight: 400;
-    margin: 0;
+    .dashboard__header-email {
+        font-size: 0.8rem;
+        font-weight: 400;
+        margin: 0;
+    }
 }
