--- a/src/index.scss
+++ b/src/index.scss
@@ -54,6 +54,14 @@ body {
         }
     }
 
+    .soon-badge {
+        background-color: #ffc69e;
+        color: #333;
+        padding: 0.2rem 0.5rem;
+        border-radius: 5px;
+        font-size: 0.8rem;
+    }
+
     button {
         cursor: pointer;
     }
