--- a/src/pages/dashboard/features/settings/Help.scss
+++ b/src/pages/dashboard/features/settings/Help.scss
@@ -9,7 +9,7 @@
         gap: 24px;
 
         h2 {
-            margin-bottom: 16px;
+            margin: 0 auto;
             font-size: 1.5rem;
             font-weight: 500;
         }
