--- a/src/pages/dashboard/components/DashboardContent.scss
+++ b/src/pages/dashboard/components/DashboardContent.scss
@@ -7,5 +7,7 @@
     @media (max-width: 868px) {
         padding: 1rem;
         margin-bottom: 80px;
+        flex: 1;
+        margin-top: 90px;
     }
 }
