--- a/src/pages/dashboard/components/DashboardContent.scss
+++ b/src/pages/dashboard/components/DashboardContent.scss
@@ -3,6 +3,7 @@
     width: 100%;
     min-height: calc(100vh - 90px);
     padding-right: 1rem;
+    padding-bottom: 1rem;
 
     @media (max-width: 868px) {
         padding: 1rem;
