--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,35 @@
 body {
     overflow-x: hidden;
 
+    a {
+        color: #666;
+        text-decoration: none;
+        position: relative;
+        transition: color 0.3s ease;
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: -2px;
+            left: 0;
+            background-color: #fe6f14;
+            transform: scaleX(0);
+            transform-origin: bottom right;
+            transition: transform 0.3s ease;
+        }
+
+        &:hover {
+            color: #fe6f14;
+
+            &::after {
+                transform: scaleX(1);
+                transform-origin: bottom left;
+            }
+        }
+    }
+
     .loading-container {
         display: flex;
         justify-content: center;
