style:cambio de estilo en los input de color

--- a/src/index.scss
+++ b/src/index.scss
@@ -100,4 +100,14 @@ body {
     button {
         cursor: pointer;
     }
+
+    input[type="color"] {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border: 0;
+        background: none;
+        cursor: pointer;
+        padding: 0;
+    }
 }
