--- a/src/index.scss
+++ b/src/index.scss
@@ -93,7 +93,7 @@ body {
         font-size: 0.8rem;
     }
 
-    .no-select {
+    .no-select, .material-symbols-rounded {
         user-select: none;
     }
 
